--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 body{
     background: #222;
+    color: white;
 }
 
 .card{
@@ -21,19 +22,19 @@ body{
 
 .input-search{
     display: flex;
-    height: 40px;
-    
+    height: 50px;    
 }
 
 .search{
     border-radius: 50%;
-    height: 35px;
-    width: 35px;
+    height: 50px;
+    width: 50px;
     background-color: aliceblue;
-    margin: 5px 20px;
+    margin: 0px 20px;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .search-input{
@@ -41,7 +42,83 @@ body{
     padding-left: 10px;
     flex: 1;
 }
+
+.search-input::placeholder{
+    font-weight: bolder;
+    font-size: 17px;
+    padding-left: 15px;
+}
+
+.search-input:focus {
+    font-size: 15px;
+    font-weight: bold;
+    padding: 15px;
+}
+
+
 .search img{
-    height: 15px;
-    width:15px;
+    height: 20px;
+    width:20px;
+}
+
+.weather{
+    color: white;
+}
+
+.weather h1{
+    font-size: 65px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.weather h2{
+    font-size: 35px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.details{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+.col{
+    display: flex;
+    align-items: center;
+
+}
+
+.col div{
+    flex: 1;
+}
+
+.col img{
+    height: 40px;
+    width:40px;
+}
+.col .humidity{
+
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 10px;
+
+}
+
+.col .wind{
+    font-size: 30px;
+    font-weight: bold;
+    padding-left: 10px;
+}
+
+.col p{
+    padding-top: 5px;
+    padding-left: 15px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.weather-icon{
+    height: 200px;
+    width: 180px;
 }
